--- a/m/.htaccess
+++ b/m/.htaccess
@@ -19,9 +19,9 @@ RewriteCond %{THE_REQUEST} ^GET.*index [NC]
 RewriteRule (.*?)index.php/*(.*) /$1$2 [R=301,NE,L]
 
 # Directs all EE web requests through the site index file
-RewriteCond %{REQUEST_FILENAME} !-f
-RewriteCond %{REQUEST_FILENAME} !-d
-RewriteRule ^(.*)$ /index.php/$1 [L]
+#RewriteCond %{REQUEST_FILENAME} !-f
+#RewriteCond %{REQUEST_FILENAME} !-d
+#RewriteRule ^(.*)$ /index.php/$1 [L]
 
 
 
